# qt-tcp-chat

./: .gitignore  .gitignore.save  CMakeLists.txt  README.md
common/: CMakeLists.txt  ChatMessagePacket.hpp  ChatRoomInfo.hpp  Packet.hpp
tcp-chat-client/: Application.cpp  Application.hpp  CMakeLists.txt  ChatHistoryManager.cpp  ChatHistoryManager.hpp  ChatMessageDelegate.cpp  ChatMessageDelegate.hpp  ChatModel.cpp  ChatModel.hpp  ChatRoom.cpp  ChatRoom.hpp  ChatRoomDelegate.cpp  ChatRoomDelegate.hpp  Client.cpp  Client.hpp  Resources.qrc  loginform.cpp  loginform.h  loginform.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
tcp-chat-server/: Application.cpp  Application.hpp  CMakeLists.txt  ChatRoom.cpp  ChatRoom.hpp  Client.cpp  Client.h  DatabaseManager.cpp  DatabaseManager.hpp  RoomManager.cpp  RoomManager.hpp  dialog.cpp  dialog.h  dialog.ui  main.cpp  server.cpp  server.h
tcp-chat-server/sql/: schema.sql
